@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="128"
+VERSION_BUILD="129"
 
 # $Log$
+#
+# BUILD : 1.4.0.129 (SVN)
+# BUGS  : 457
+# NOTES : Fixed GeoIP problems on win32. Thanks Trystan for providing the fix!
 #
 # BUILD : 1.4.0.128 (SVN)
 # BUGS  : N/A
