@@ -34,6 +34,7 @@ Provided by Denora Team <dev@denorastats.org> - 2007
 08/07 U Updated GeoIP database file                               [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+11/28 F Fixed GeoIP problems on win32                             [#457]
 11/27 F Fixed channel mode hash being case insensitive            [#453]
 11/27 F Improved GeoIP performance and fixed not working on win32 [#452]
 11/26 F Fixed html output file being read-only on windows systems [#451]
